split filter block script
remove filter block styles
added more supports to filter block

--- a/gutenberg/blocks/filter-item/style.scss
+++ b/gutenberg/blocks/filter-item/style.scss
@@ -1,7 +1,1 @@
-.wp-block-visual-portfolio-filter {
-	.vp-filter__items {
-		display: flex;
-		flex-wrap: wrap;
-		gap: var(--vp-filter-default--items__gap);
-	}
-}
+// Empty for now.
