--- a/assets/admin/css/style.scss
+++ b/assets/admin/css/style.scss
@@ -49,9 +49,9 @@ $escaped-svg-characters: (
 
 @import "../../../gutenberg/components/pro-note/style.scss";
 
-#adminmenu a[href*="https://visualportfolio.co/pricing/"],
-.wp-list-table.plugins a[href*="https://visualportfolio.co/pricing/"],
-.vpf-admin-toolbar a[href*="https://visualportfolio.co/pricing/"] {
+#adminmenu a[href*="https://visualportfolio.com/pricing/"],
+.wp-list-table.plugins a[href*="https://visualportfolio.com/pricing/"],
+.vpf-admin-toolbar a[href*="https://visualportfolio.com/pricing/"] {
 	font-weight: 700;
 	color: #11b916;
 
