--- a/assets/admin/css/style.scss
+++ b/assets/admin/css/style.scss
@@ -1,6 +1,6 @@
 /*!
  * Name    : Visual Portfolio
- * Author  : nK https://nkdev.info
+ * Author  : Visual Portfolio Team <https://www.visualportfolio.com>"
  */
 
 @use "sass:math";
