--- a/gutenberg/blocks/filter/style.scss
+++ b/gutenberg/blocks/filter/style.scss
@@ -1,1 +1,46 @@
-// Empty for now.
+// Pagination block.
+.wp-block-visual-portfolio-filter {
+	font-size: var(--wp--preset--font-size--medium, 1rem);
+	font-weight: 500;
+}
+
+// Count.
+.wp-block-visual-portfolio-filter-count {
+	display: inline-block;
+	margin-left: 0.6ch;
+
+	&::before {
+		content: "(";
+	}
+	&::after {
+		content: ")";
+	}
+}
+
+// Fill style.
+.is-style-fill {
+	&.wp-block-visual-portfolio-filter {
+		gap: 0;
+
+		a {
+			text-decoration: none;
+		}
+	}
+
+	.wp-block-visual-portfolio-filter-item {
+		border-radius: 9999px;
+		padding: 0.3em 0.8em;
+		background-color: transparent;
+		text-decoration: none;
+		font-weight: 400;
+
+		&:hover,
+		&:focus {
+			opacity: 0.6;
+		}
+
+		&.is-active {
+			background-color: color-mix(in srgb, currentColor 10%, transparent);
+		}
+	}
+}
