--- a/gutenberg/blocks/pagination/style.scss
+++ b/gutenberg/blocks/pagination/style.scss
@@ -14,6 +14,12 @@
 	margin-right: 0.6ch;
 }
 
+// Load more and infinite blocks.
+.wp-block-visual-portfolio-pagination-load-more-loading,
+.wp-block-visual-portfolio-pagination-infinite-loading {
+	display: none;
+}
+
 // Numbers block
 .wp-block-visual-portfolio-pagination-numbers {
 	display: flex;
