removed a lot of code from main.js
add separate scripts for blocks and support the legacy block AJAX loading
removed data-vp-pagination attrs from blocks

--- a/gutenberg/blocks/pagination/style.scss
+++ b/gutenberg/blocks/pagination/style.scss
@@ -20,6 +20,17 @@
 	display: none;
 }
 
+.vp-portfolio__loading {
+	.wp-block-visual-portfolio-pagination-load-more-loading,
+	.wp-block-visual-portfolio-pagination-infinite-loading {
+		display: block;
+	}
+	.wp-block-visual-portfolio-pagination-load-more > :first-child,
+	.wp-block-visual-portfolio-pagination-infinite > :first-child {
+		display: none;
+	}
+}
+
 // Numbers block
 .wp-block-visual-portfolio-pagination-numbers {
 	display: flex;
