renamed modern blocks and contexts - use smaller prefix

--- a/gutenberg/blocks/pagination/style.scss
+++ b/gutenberg/blocks/pagination/style.scss
@@ -1,38 +1,38 @@
 // Pagination block.
-.wp-block-visual-portfolio-pagination {
+.vp-block-pagination {
 	font-size: var(--wp--preset--font-size--medium, 1rem);
 	font-weight: 500;
 }
 
 // Previous and next blocks.
-.wp-block-visual-portfolio-pagination-next-arrow {
+.vp-block-pagination-next-arrow {
 	display: inline-block;
 	margin-left: 0.6ch;
 }
-.wp-block-visual-portfolio-pagination-previous-arrow {
+.vp-block-pagination-previous-arrow {
 	display: inline-block;
 	margin-right: 0.6ch;
 }
 
 // Load more and infinite blocks.
-.wp-block-visual-portfolio-pagination-load-more-loading,
-.wp-block-visual-portfolio-pagination-infinite-loading {
+.vp-block-pagination-load-more-loading,
+.vp-block-pagination-infinite-loading {
 	display: none;
 }
 
 .vp-portfolio__loading {
-	.wp-block-visual-portfolio-pagination-load-more-loading,
-	.wp-block-visual-portfolio-pagination-infinite-loading {
+	.vp-block-pagination-load-more-loading,
+	.vp-block-pagination-infinite-loading {
 		display: block;
 	}
-	.wp-block-visual-portfolio-pagination-load-more > :first-child,
-	.wp-block-visual-portfolio-pagination-infinite > :first-child {
+	.vp-block-pagination-load-more > :first-child,
+	.vp-block-pagination-infinite > :first-child {
 		display: none;
 	}
 }
 
 // Numbers block
-.wp-block-visual-portfolio-pagination-numbers {
+.vp-block-pagination-numbers {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 0.4ch;
@@ -40,8 +40,8 @@
 
 // Fill style.
 .is-style-fill {
-	.wp-block-visual-portfolio-pagination-next,
-	.wp-block-visual-portfolio-pagination-previous {
+	.vp-block-pagination-next,
+	.vp-block-pagination-previous {
 		border-radius: 9999px;
 		padding: 0.3em 0.8em;
 		background-color: color-mix(in srgb, currentColor 7%, transparent);
@@ -54,7 +54,7 @@
 		}
 	}
 
-	.wp-block-visual-portfolio-pagination-numbers {
+	.vp-block-pagination-numbers {
 		align-items: center;
 		font-weight: 400;
 		gap: 0.6ch;
