--- a/gutenberg/blocks/sort/style.scss
+++ b/gutenberg/blocks/sort/style.scss
@@ -1,5 +1,5 @@
 // Sort block.
-.wp-block-visual-portfolio-sort {
+.vp-block-sort {
 	font-size: var(--wp--preset--font-size--medium, 1rem);
 	font-weight: 500;
 
