--- a/gutenberg/_variables.scss
+++ b/gutenberg/_variables.scss
@@ -2,6 +2,12 @@
  * WordPress.
  */
 @import "../node_modules/@wordpress/base-styles/colors.native";
+@import "../node_modules/@wordpress/base-styles/colors";
 @import "../node_modules/@wordpress/base-styles/variables";
 @import "../node_modules/@wordpress/base-styles/breakpoints";
 @import "../node_modules/@wordpress/base-styles/mixins";
+
+// Backward-compatible aliases (base-styles v6 removed these names).
+$light-gray-100: $gray-100;
+$light-gray-400: $gray-200;
+$light-gray-600: $gray-300;
