--- a/gutenberg/_variables.scss
+++ b/gutenberg/_variables.scss
@@ -8,6 +8,6 @@
 @import "../node_modules/@wordpress/base-styles/mixins";
 
 // Backward-compatible aliases (base-styles v6 removed these names).
-$light-gray-100: $gray-100;
-$light-gray-400: $gray-200;
-$light-gray-600: $gray-300;
+$light-gray-100: #f8f9f9;
+$light-gray-400: #e8eaeb;
+$light-gray-600: #d7dade;
